Orchestration_container/service.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: laravel-app
  labels:
    app: laravel
    tier: backend
    env: dev
spec:
  selector:
    app: laravel
    tier: backend
    env: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
