Orchestration_container/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-app
spec:
  ingressClassName: laravel
  rules:
    - host: kirahadian12@gmail.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-app
                port:
                  number: 80
